# p2p-network

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.client  Dockerfile.server  README.md  build-boost.sh  docker-compose.yml  install-protobuf.sh  run-after-clone.sh
doc/: .gitignore  projekt-koncowy.tex  projekt-wstepny.tex
include/client/: CSocket.h
include/shared/: CCMessage.h  CSMessage.h  MessageUtils.h  TcpMessage.h  sharedUtils.h
include/shared/protoc/: TcpMessage.proto
src/: main.cpp  run_client_instance_in_docker.sh
src/client/: .gitignore  CLI.cpp  CLI.h  CMakeLists.txt  CSocket.cpp  main.cpp  t  t.torrent  test.txt  torrent.db
src/client/database/: CMakeLists.txt  Database.cpp  Database.h
src/client/download/: CMakeLists.txt  DownloadManager.cpp  DownloadManager.h  DownloadWorker.cpp  DownloadWorker.h
src/client/file/: CMakeLists.txt  File.cpp  File.h  FileManager.cpp  FileManager.h  PeerInfo.h  Segment.cpp  Segment.h
src/client/networking/: BaseSocket.cpp  BaseSocket.h  CMakeLists.txt  CSocket.cpp  CSocket.h  RequestHandler.cpp  RequestHandler.h  ResponderThread.cpp  ResponderThread.h  SSocket.cpp  SSocket.h
src/client/tests/: CMakeLists.txt  tests_client  tests_main.cpp
src/client/utils/: GeneralTypes.h
src/server/: CMakeLists.txt  TrackerThread.cpp  TrackerThread.h  main.cpp
src/server/database/: CMakeLists.txt  ClientInfo.h  Database.cpp  Database.h
src/server/tests/: CMakeLists.txt  tests-server  tests_main.cpp
src/server/utils/: GeneralTypes.h
src/shared/: CCMessage.cpp  CMakeLists.txt  CSMessage.cpp  GeneralTypes.h  MessageUtils.cpp  TcpMessage.cpp  Torrent.cpp  Torrent.h  sharedUtils.cpp  sharedUtils.h
src/shared/protoc/: TcpMessage.proto
