project(client)
file(GLOB SOURCE_FILES "./*")
file(GLOB PROTO_FILES "../shared/protoc/*.proto")

find_package(Protobuf REQUIRED)
include_directories(${PROTOBUF_INCLUDE_DIRS})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(../shared .)
add_subdirectory(download)
add_subdirectory(database)
add_subdirectory(file)
add_subdirectory(networking)
add_executable(client ${SOURCE_FILES} ${PROTO_SRCS} ${PROTO_HDRS})
target_link_libraries(client spdlog  shared ${PROTOBUF_LIBRARY}  client_download client_database client_file client_networking)
